# CC-MPC-Align

./: .gitignore  CMakeLists.txt  README.md  research_methods.md
plugins/MultiAlign/: CMakeLists.txt  info.json
plugins/MultiAlign/include/: MultiAlign.h
plugins/MultiAlign/scripts/: fgr_multi_align.py
plugins/MultiAlign/src/: CMakeLists.txt  MultiAlignPlugin.cpp  MultiAlignTool.cpp  MultiAlignTool.h
plugins/MultiAlign/ui/: CMakeLists.txt  MultiAlignDlg.ui
